ch7/panic-to-result-usage/tests/fails/empty_panic.stderr
error: please make sure every panic in your function has a message, check: if age > 30 { panic! (); }
 --> tests/fails/empty_panic.rs:6:9
  |
6 |         panic!();
  |         ^^^^^
